tests/dataset/tpc-ds/compiler/java/q14.error
javac error: exit status 1
/tmp/TestJavaCompiler_TPCDSQueriesq141017539121/001/Q14.java:376: error: unnamed variables are a preview feature and are disabled by default.
    for (var _ : g) {
             ^
  (use --enable-preview to enable unnamed variables)
/tmp/TestJavaCompiler_TPCDSQueriesq141017539121/001/Q14.java:377: error: as of release 9, '_' is a keyword, and may not be used as an identifier
        res7.add(_);
                 ^
2 errors
